--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,18 @@
   <head>
     <title>Nascondi svapo</title>
     <script src="popup.js"></script>
+     <link rel="stylesheet" type="text/css" href="popup.css">
   </head>
   <body>
     <h1>Nascondi utenti</h1>
-	<p>Per nascondere un utente scrivere il nome nel riquadro in basso, per inserire piu' nomi utente, separarli con un ;</p>
-	<textarea id="lista" rows="5" cols="30"></textarea>
-	<input type="checkbox"  id="ONOFF" name="Attiva" value="bho"> Attiva <br>
-	<p>By Gnappinox1</p>
+	<p class="info">Per nascondere un utente scrivere il nome nel riquadro in basso. Per inserire piu' nomi utente separarli con un ;</p>
+    <div class="text">
+        <textarea class="area" id="lista" rows="5" cols="50"></textarea><br>
+    <div>
+    <div class="check">
+    <input type="checkbox"  id="ONOFF" name="Attiva" value="bho">
+	<label for="ONOFF"></label>
+    </div>
+    <p class="author">By Gnappinox1<br>Styled by Kallor</p>
    </body>
 </html>
