Aggiunti Eventi alla griglia

--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,10 @@
 	<body>
 		<h1>Nascondi utenti V1</h1>
 		<p class="info">Per nascondere un utente scrivere il nome nella tabella in basso<br>Per sostituire il testo del post, oltre al nome bisogna scrivere il nuovo testo nella colonna affianco al nome</p>
+		<!--
 		<div class="text">
 				<textarea class="area" id="lista" rows="5" cols="50"></textarea><br>
-		</div>
+		</div>		-->
 
 		<div id="jsGrid"></div>
 
